--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,6 @@
 theme: jekyll-theme-midnight
 title: MK3S SSL Homepage
 description: Shell Script Library
+safe: BOOL
+timezone: central
+encoding: UTF-8
