--- a/_config.yml
+++ b/_config.yml
@@ -6,3 +6,5 @@ timezone: central
 encoding: UTF-8
 show_downloads: true
 author: Mason Sipe
+minimal_mistakes_skin: "contrast"
+repository: "mksipe/Shell-Script-Lib"
