--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
           command: echo Hello, world.
       - run:
           name: Print the Current Time
-          command: date && apt install git -y 
+          command: date && apt install git -y && yum install git 
       - run:
           name: Initialize program
           command: git clone https://github.com/mksipe/Shell-Script-Lib && cd Shell-Script-Lib && chmod 755 INITAILIZE.sh && ./INITIALIZE.sh && cd /bin/lib/sh/MK3S && ./RecSetup.sh
