--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,12 +5,15 @@ jobs:
       - image: debian:stretch
     steps:
       - checkout
+      - run: 
+          name: Install required packages
+          command: apt-get install git & yum install git
       - run:
           name: Greeting
           command: echo Hello, world.
       - run:
           name: Print the Current Time
-          command: date && apt install git -y && yum install git 
+          command: date 
       - run:
           name: Initialize program
           command: git clone https://github.com/mksipe/Shell-Script-Lib && cd Shell-Script-Lib && chmod 755 INITAILIZE.sh && ./INITIALIZE.sh && cd /bin/lib/sh/MK3S && ./RecSetup.sh
