--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,12 +2,12 @@ version: 2
 jobs:
   build:
     docker:
-      - image: debian:stretch
+      - image: ubuntu:stretch
     steps:
       - checkout
       - run: 
           name: Install required packages
-          command: apt-get install git & yum install git
+          command: apt-get install git yum & yum install git
       - run:
           name: Greeting
           command: echo Hello, world.
